tests/semantic_cases/invalid/writestring_missing_arg.ob0
MODULE Main;
BEGIN
  WriteString
END Main.
